Add Rcpp implementation
Rcpp implementation added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(max_order_statistic)
 export(range_probability)
 export(recursive_sum)
 export(smallest_order_value)
+exportPattern("^[[:alpha:]]+")
 import(stats)
 import(utils)
+importFrom(Rcpp,evalCpp)
 importFrom(utils,globalVariables)
-useDynLib(XOMultinom)
+useDynLib(XOMultinom, .registration = TRUE)
