Add new functions for max and min
New functions for max and min added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(highest_order_statistics)
 export(max_for_min)
 export(max_for_range)
 export(max_order_statistic)
+export(pmaxmultinom)
+export(pminmultinom)
 export(range_probability)
 export(recursive_sum)
 export(smallest_order_value)
