--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,11 @@ export(max_for_min)
 export(max_for_range)
 export(max_order_statistic)
 export(pmaxmultinom)
+export(pmaxmultinom_R)
+export(pmaxmultinom_R_one)
 export(pminmultinom)
+export(pminmultinom_R)
+export(pminmultinom_R_one)
 export(range_probability)
 export(recursive_sum)
 export(smallest_order_value)
@@ -13,5 +17,6 @@ exportPattern("^[[:alpha:]]+")
 import(stats)
 import(utils)
 importFrom(Rcpp,evalCpp)
+importFrom(tools,file_path_as_absolute)
 importFrom(utils,globalVariables)
 useDynLib(XOMultinom, .registration = TRUE)
