add range with Corrado approach
range with Corrado approach added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(pmaxmultinom_R_one)
 export(pminmultinom)
 export(pminmultinom_R)
 export(pminmultinom_R_one)
+export(prangemultinom)
 export(range_probability)
 export(recursive_sum)
 export(smallest_order_value)
