--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(max_for_min)
 export(max_for_range)
 export(max_order_statistic)
 export(maxmin_multinom_size)
+export(maxmin_multinom_size_OLD)
 export(pmax_2_incr)
 export(pmaxmultinom)
 export(pmaxmultinom_R)
